--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,14 +49,15 @@ jobs:
         uses: actions/checkout@v3
 
       # ---- Linux Docker ----
-      - name: Setup Linux Docker
+      - name: Setup Linux Dependencies
         if: runner.os == 'Linux'
         shell: bash
         run: |
           echo "Installing dependencies..."
-          export DEBIAN_FRONTEND=noninteractive
           sudo apt-get update
-          sudo apt-get install -y chromium-browser x11-apps php-cli docker.io docker-compose
+          sudo apt-get install -y chromium-browser x11-apps php-cli
+          # Docker ist schon installiert, keine Installation nötig
+          docker --version
 
           # Dynamische .env erzeugen
           echo "APP_ENV=ci" > .env
