--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,8 @@ jobs:
       - name: Install Dependencies
         run: |
           sudo apt-get update
+          sudo apt-get remove --purge man-db
+          sudo apt-get autoremove -y
           sudo apt-get install -y ack-grep
 
       - name: Run Smoke Tests
