--- a/.htaccess
+++ b/.htaccess
@@ -2,3 +2,12 @@ RedirectMatch 404 /\.git
 RedirectMatch 404 docker.sh
 RedirectMatch 404 install.sh
 RedirectMatch 404 static_code_analysis.sh
+
+ErrorDocument 400 /error.php?code=400
+ErrorDocument 401 /error.php?code=401
+ErrorDocument 403 /error.php?code=403
+ErrorDocument 404 /error.php?code=404
+ErrorDocument 500 /error.php?code=500
+ErrorDocument 502 /error.php?code=502
+ErrorDocument 503 /error.php?code=503
+ErrorDocument 504 /error.php?code=504
